# postfix-mail-admin

./: .editorconfig  .gitignore  LICENSE  README.md  Vagrantfile  deploy.php  pyproject.toml
docs/: database.puml
migrations/versions/: 4e660ee1e962_create_domains_table.py  974a1c3f4d2a_create_users_table.py  e0a4da5dbe40_create_mailboxes_table.py  eac808f72d61_create_aliases_table.py
postfix_mail_admin/: __init__.py  auth.py  config.py  forms.py  services.py
postfix_mail_admin/cli/: __init__.py  users.py
postfix_mail_admin/models/: __init__.py  alias.py  base.py  domain.py  mailbox.py  user.py
postfix_mail_admin/templates/: base.html  index.html  login.html
postfix_mail_admin/templates/aliases/: _form.html  create.html  edit.html  index.html
postfix_mail_admin/templates/domains/: _form.html  create.html  edit.html  index.html
postfix_mail_admin/templates/helpers/: _pagination.html
postfix_mail_admin/templates/mailboxes/: _form.html  create.html  edit.html  index.html
postfix_mail_admin/templates/partials/: footer.html  header.html  messages.html
postfix_mail_admin/templates/users/: _form.html  edit.html  profile.html
postfix_mail_admin/views/: __init__.py  aliases.py  auth.py  dashboard.py  domains.py  mailboxes.py  users.py
